--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Web Full Stack</h1>
+<li>Command Line</li>
+<p>Command Line</p>
 </body>
 </html>
