--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <body>
 <h1>Web Full Stack</h1>
-<li>Command Line</li>
-<p>Command Line</p>
+<ol>
+  <li>Command Line</li>
+  <ul>
+    <li>pwd: outputs the name of the current working directory.</li>
+    <li>ls: lists all files and directories in the working directory.</li>
+    <li>cd: switches you into the directory you specify.</li>
+    <li>mkdir: creates a new directory in the working directory.</li>
+    <li>touch: creates a new file inside the working directory.</li>
+    <li>clear: clears the terminal</li>
+  </ul>
+</ol>
+
 <h1>Data Science</h1>
 </body>
 </html>
