--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <ol>
   <li>Command Line</li>
   <ul>
-    <li>pwd: outputs the name of the current working directory.</li>
-    <li>ls: lists all files and directories in the working directory.</li>
-    <li>cd: switches you into the directory you specify.</li>
-    <li>mkdir: creates a new directory in the working directory.</li>
-    <li>touch: creates a new file inside the working directory.</li>
-    <li>clear: clears the terminal</li>
+    <li>pwd(print wokring wirectory): outputs the name of the current working directory.</li>
+    <li>ls(list files): lists all files and directories in the working directory.</li>
+    <li>cd(change directory): switches you into the directory you specify.</li>
+    <li>mkdir(make directory): creates a new directory in the working directory.</li>
+    <li>touch<i>(verb)</i>: create, change and modify timestamps of a file</li>
+    <li>clear<i>(verb)</i>: clears the terminal</li>
   </ul>
 </ol>
 
