--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <body>
+<br>
 <h1>Web Full Stack</h1>
+<hr>
 <ol>
-  <li>Command Line</li>
+  <li>Command Line</li><br>
   <ul>
-    <li>pwd(print wokring wirectory): outputs the name of the current working directory.</li>
-    <li>ls(list files): lists all files and directories in the working directory.</li>
-    <li>cd(change directory): switches you into the directory you specify.</li>
-    <li>mkdir(make directory): creates a new directory in the working directory.</li>
-    <li>touch<i>(verb)</i>: create, change and modify timestamps of a file</li>
-    <li>clear<i>(verb)</i>: clears the terminal</li>
+    <li><b>pwd</b> <i>print wokring directory</i>: outputs the name of the current working directory.</li>
+    <li><b>ls</b> <i>list files</i>: lists all files and directories in the working directory.</li>
+    <li><b>cd</b> <i>change directory</i>: switches you into the directory you specify.</li>
+    <p>+) cd ..</p>
+    <p>+) cd ../..</p>
+    <li><b>mkdir</b> <i>make directory</i>: creates a new directory in the working directory.</li>
+    <li><b>touch</b> <i>(verb)</i>: create, change and modify timestamps of a file</li>
+    <li><b>clear</b> <i>(verb)</i>: clears the terminal</li>
   </ul>
 </ol>
+<hr>
 
 <h1>Data Science</h1>
 </body>
