--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <ol>
   <li>Command Line</li><br>
   <ul>
+    <p>Directory:</p>
+    <p>File System: organizes data; computer's files and directories into a tree structure</p>
+    <p>Bash <i>Bourne-Again SHell</i></p>
     <li><b>pwd</b> <i>print wokring directory</i>: outputs the name of the current working directory.</li>
     <li><b>ls</b> <i>list files</i>: lists all files and directories in the working directory.</li>
     <li><b>cd</b> <i>change directory</i>: switches you into the directory you specify.</li>
@@ -16,6 +19,9 @@
     <li><b>touch</b> <i>(verb)</i>: create, change and modify timestamps of a file</li>
     <li><b>clear</b> <i>(verb)</i>: clears the terminal</li>
   </ul>
+  <br>
+  <li>Text Editors</li>
+  <p>Text Editors (code editors): applications used by developers to write code</p>
 </ol>
 <hr>
 
