--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
 <hr>
 
 <h1>Data Science</h1>
+<hr>
+<h1>Algorithms</h1>
+<hr>
+<h1>Computer Science</h1>
+<hr>
+<h1>Mathematics</h1>
+<hr>
 </body>
 </html>
