--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<br>
-<h1>Web Full Stack</h1>
+
+
+<h3>This website loads resources to everything related to becoming a data scientist</h3>
 <hr>
+
+
+<h1>Web Full Stack</h1>
 <ol>
   <li>Command Line</li><br>
   <ul>
@@ -23,20 +27,26 @@
   <li>Text Editors</li>
   <p>Text Editors (code editors): applications used by developers to write code</p>
 </ol>
+<i>All 'Web Full Stack' contents are referenced from:</i>
+<i><a href="wwww.codeacademy.com">CodeAcademy</a></i>
 <hr>
 
-<h1>Data Science</h1>
-<hr>
-<h1>Algorithms</h1>
-<hr>
+
 <h1>Computer Science</h1>
+<h2>Algorithms</h2>
+<h2>Operating Systems</h2>
 <hr>
-<h1>Statistics</h1>
+
+
+<h1>Data Science</h1>
+<h2>Statistics</h2>
 <ol>
-  <li></li>
+  <li>What is Statistics</li>
 </ol>
 <i>All 'Statistics' contents are referenced from:</i>
 <i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
 <hr>
+
+
 </body>
 </html>
