--- a/index.html
+++ b/index.html
@@ -27,24 +27,56 @@
   <li>Text Editors</li>
   <p>Text Editors (code editors): applications used by developers to write code</p>
 </ol>
-<i>All 'Web Full Stack' contents are referenced from:</i>
+
+<h2>FrontEnd</h2>
+
+<h3>HTML</h3>
+
+<h3>CSS</h3>
+
+<h3>JavaScript</h3>
+
+<h2>BackEnd</h2>
+
+<h3>PHP</h3>
+
+<h3>Node.js</h3>
+
+<i>References:</i>
 <i><a href="wwww.codeacademy.com">CodeAcademy</a></i>
 <hr>
 
 
 <h1>Computer Science</h1>
 <h2>Algorithms</h2>
+
 <h2>Operating Systems</h2>
+
+<h2>DataBase</h2>
+
+<h2>NetWorking</h2>
+
 <hr>
 
 
 <h1>Data Science</h1>
 <h2>Statistics</h2>
 <ol>
-  <li>What is Statistics</li>
+  <li>Statistics</li>
+  <li>Probability</li>
+  <li>Discrete Random Variables & Probability Distributions</li>
+  <li>Continuous Variables & Probability Distributions</li>
+  <li>Multivariate Probability Distributions</li>
+  <li>Functions of Random Variables</li>
 </ol>
-<i>All 'Statistics' contents are referenced from:</i>
+<i>References:</i>
 <i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
+
+<h2>Data Analysis</h2>
+
+<h2>Machine Learning</h2>
+
+<h2>Deep Learning</h2>
 <hr>
 
 
