--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 
 <h1>Web Full Stack</h1>
+
+<h2>Terminal</h2>
 <ol>
   <li>Command Line</li><br>
   <ul>
@@ -24,23 +26,38 @@
     <li><b>clear</b> <i>(verb)</i>: clears the terminal</li>
   </ul>
   <br>
-  <li>Text Editors</li>
-  <p>Text Editors (code editors): applications used by developers to write code</p>
 </ol>
+
+<h2>GitHub</h2>
 
 <h2>FrontEnd</h2>
 
-<h3>HTML</h3>
+<li>Text Editors</li>
+<p>Text Editors (code editors): applications used by developers to write code</p>
+<h4>HTML</h4>
+<h4>CSS</h4>
 
-<h3>CSS</h3>
+<h2>Dynamic FrontEnd</h2>
+<h4>JavaScript</h4>
+<h4>jQuery</h4>
+<h4>AJAX</h4>
+<h4>JSON</h4>
+<h4>XML</h4>
 
-<h3>JavaScript</h3>
+<h2>FrameWorks</h2>
+<h4>Bootstrap</h4>
+<h4>Laravel</h4>
+<h4>Django</h4>
 
 <h2>BackEnd</h2>
+<h3>Web Server</h3>
+<h4>PHP</h4>
+<h4>Node.js</h4>
 
-<h3>PHP</h3>
-
-<h3>Node.js</h3>
+<h3>DB Server</h3>
+<h4>MySQL</h4>
+<h4>MariaDB</h4>
+<h4>MongoDB</h4>
 
 <i>References:</i>
 <i><a href="wwww.codeacademy.com">CodeAcademy</a></i>
@@ -48,19 +65,26 @@
 
 
 <h1>Computer Science</h1>
+<h2>Terminal, Command Line</h2>
+
+<h2>Git</h2>
+
 <h2>Algorithms</h2>
 
 <h2>Operating Systems</h2>
 
 <h2>DataBase</h2>
 
-<h2>NetWorking</h2>
+<h2>NetWorking, BlockChains, Cloud Computing</h2>
 
-<hr>
+<h2>Maths for Computer Science</h2>
+<h3>Binary Maths</h3>
+<h3>Discrete Maths</h3>
+<h3>Algebra</h3>
+<h3>Calculus</h3>
 
-
-<h1>Data Science</h1>
-<h2>Statistics</h2>
+<h2>Maths for Data Science</h2>
+<h3>Statistics</h3>
 <ol>
   <li>Statistics</li>
   <li>Probability</li>
@@ -72,12 +96,56 @@
 <i>References:</i>
 <i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
 
-<h2>Data Analysis</h2>
 
-<h2>Machine Learning</h2>
+<h2>Maths for Artificial Intelligence</h2>
+<h3>Linear Algebra</h3>
+<h3>Vector</h3>
 
-<h2>Deep Learning</h2>
 <hr>
+
+
+<h1>Data Science</h1>
+
+<h2>Statistics for Data Science</h2>
+
+<h2>Data Analysis Langauges</h2>
+<h3>Python</h3>
+<h3>R</H3>
+
+<h2>Data Visualization Libraries</h2>
+<h3>Matplotlib</h3>
+<h3>Seaborn</h3>
+<h3>ggplot</h3>
+
+<h2>Artificial Intelligence</h2>
+
+
+<h2>Machine Learning Libraries</h2>
+<h3>Scikit-learn</h3>
+<h3>TensorFlow</h3>
+<h3>Keras</h3>
+<h3>PyTorch</h3>
+<h3>OpenCV</h3>
+
+<h2>Managing Data Resources</h2>
+<h3>DataBase</h3>
+<ol>
+  <li>SAP</li>
+</ol>
+<h3>BigData</h3>
+
+<hr>
+
+
+<h1>Other Fields of Study</h1>
+<h2>Natural Lnaguage Processing</h2>
+<h3>Natural Language Processing Libraries</h4>
+<h4>Natural Language Toolkit (NLTK)</h4>
+<h4>Gensim</h4>
+<h2>Ecologocial Analysis</h2>
+<h2>Bioinformatics</h2>
+<h2>Business Data Analysis</h2>
+
 
 
 </body>
