--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<h3>This website loads resources to everything related to becoming a data scientist</h3>
+<h3>Cut the BS website on Data Science</h3>
 <hr>
 
 
@@ -11,11 +11,14 @@
 
 <h2>Terminal</h2>
 <ol>
-  <li>Command Line</li><br>
+  <li>Command Line Terminologies</li>
+    <p><b>Directory</b>: a file system cataloging structure which contains references to other computer files, and possibly other directories</p>
+    <p><b>File System</b>: organizes data; computer's files and directories into a tree structure</p>
+    <p><b>Bash</b>: <i>Bourne-Again SHell</i></p>
+
+  <li>Command Line Cheat Sheet</li><br>
+
   <ul>
-    <p>Directory:</p>
-    <p>File System: organizes data; computer's files and directories into a tree structure</p>
-    <p>Bash <i>Bourne-Again SHell</i></p>
     <li><b>pwd</b> <i>print wokring directory</i>: outputs the name of the current working directory.</li>
     <li><b>ls</b> <i>list files</i>: lists all files and directories in the working directory.</li>
     <li><b>cd</b> <i>change directory</i>: switches you into the directory you specify.</li>
@@ -29,6 +32,8 @@
 </ol>
 
 <h2>GitHub</h2>
+
+<h2>User Experience, User Interface (UX/UI)</h2>
 
 <h2>FrontEnd</h2>
 
@@ -93,13 +98,12 @@
   <li>Multivariate Probability Distributions</li>
   <li>Functions of Random Variables</li>
 </ol>
-<i>References:</i>
-<i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
-
 
 <h2>Maths for Artificial Intelligence</h2>
 <h3>Linear Algebra</h3>
 <h3>Vector</h3>
+<i>References:</i>
+<i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
 
 <hr>
 
@@ -117,7 +121,74 @@
 <h3>Seaborn</h3>
 <h3>ggplot</h3>
 
-<h2>Artificial Intelligence</h2>
+<h2>Machine Learning</h2>
+<ol>
+  <h3><li>Classification</li></h3>
+  <ol>
+    <li>MNIST</li>
+    <li>Training a Binary Classifier</li>
+    <li>Performance Measures</li>
+    <li>Multiclass Classification</li>
+    <li>Error Analysis</li>
+    <li>Multilabel Classification</li>
+    <li>Multioutput Classification</li>
+  </ol>
+  <h3><li>Training Models</li></h3>
+  <ol>
+    <li>Linear Regression</li>
+    <li>Gradient Descent</li>
+    <li>Polynomial Regression</li>
+    <li>Learning Curves</li>
+    <li>Regularized Linear Models</li>
+    <li>Logistic Regression</li>
+  </ol>
+  <h3><li>Support Vector Machines</li></h3>
+  <ol>
+    <li>Linear SVM Classification</li>
+    <li>Nonlinear SVM Classification</li>
+    <li>SVM Regression</li>
+    <li>SVM</li>
+  </ol>
+  <h3><li>Decision Trees</li></h3>
+  <ol>
+    <li>Training and Visualizing a Decision Tree</li>
+    <li>Making Predictions</li>
+    <li>Estimating Class Probabilities</li>
+    <li>The CART Training Algorithm</li>
+    <li>Computational Complexity</li>
+    <li>Gini Impurity VS Entropy</li>
+    <li>Regularization Hyperparameters</li>
+    <li>Regression</li>
+    <li>Instability</li>
+  </ol>
+  <h3><li>Ensemble Learning and Random Forests</li></h3>
+  <ol>
+    <li>Voting Classifiers</li>
+    <li>Bagging and Pasting</li>
+    <li>Random Patches and Random Subspaces</li>
+    <li>Random Forests</li>
+    <li>Boosting</li>
+    <li>Stacking</li>
+  </ol>
+  <h3><li>Dimensionality Reduction</li></h3>
+  <ol>
+    <li>The Curse of Dimensionality</li>
+    <li>Main Approaches for Dimensionality Reduction</li>
+    <li>PCA</li>
+    <li>Kernal PCA</li>
+    <li>LLE</li>
+    <li>Other Dimension Reduction Techniques</li>
+  </ol>
+  <h3><li>Unsupervised Learning Techniques</li></h3>
+  <ol>
+    <li>Clustering</li>
+    <li>Gaussian Mixtures</li>
+  </ol>
+
+
+</ol>
+
+<h2>Neural Networks and Deep Learning</h2>
 
 
 <h2>Machine Learning Libraries</h2>
@@ -128,16 +199,13 @@
 <h3>OpenCV</h3>
 
 <h2>Managing Data Resources</h2>
-<h3>DataBase</h3>
-<ol>
-  <li>SAP</li>
-</ol>
-<h3>BigData</h3>
+<h3>SAS</h3>
+<h3>Big Data Optimization</h3>
 
 <hr>
 
 
-<h1>Other Fields of Study</h1>
+<h1>Other Fields on Data Science</h1>
 <h2>Natural Lnaguage Processing</h2>
 <h3>Natural Language Processing Libraries</h4>
 <h4>Natural Language Toolkit (NLTK)</h4>
@@ -145,6 +213,10 @@
 <h2>Ecologocial Analysis</h2>
 <h2>Bioinformatics</h2>
 <h2>Business Data Analysis</h2>
+<hr>
+
+
+<h1>English</h1>
 
 
 
