--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<title>
+  Cut the BS for Data Science
+</title>
+<style>
+a {
+  text-decoration: none;
+}
+</style>
+<script>
+</script>
+</head>
+
 <body>
 
 
@@ -44,6 +58,10 @@
 
 <h2>Dynamic FrontEnd</h2>
 <h4>JavaScript</h4>
+<h4>TypeScript</h4>
+  <p>a strict syntactical superset of JavaScript and adds optional static typing to the language</p>
+  <img src="risk.png" alt="risk_icon" width="15" height="15">
+  <span>Typescript == Javascript. <a href="https://www.codementor.io/@r0zar/don-t-use-typescript-for-your-next-project-here-s-why-1afd52afla">But the Typescript bike can't drive on roads without some minor modification. </span></a>
 <h4>jQuery</h4>
 <h4>AJAX</h4>
 <h4>JSON</h4>
