--- a/index.html
+++ b/index.html
@@ -50,38 +50,58 @@ a {
 <h2>User Experience, User Interface (UX/UI)</h2>
 
 <h2>FrontEnd</h2>
-
-<li>Text Editors</li>
-<p>Text Editors (code editors): applications used by developers to write code</p>
-<h4>HTML</h4>
-<h4>CSS</h4>
+<ul>
+  Text Editors
+  <p>Text Editors (code editors): applications used by developers to write code</p>
+  <li><h4>HTML</h4></li>
+  <li><h4>CSS</h4></li>
+</ul>
 
 <h2>Dynamic FrontEnd</h2>
-<h4>JavaScript</h4>
-<h4>TypeScript</h4>
-  <p>a strict syntactical superset of JavaScript and adds optional static typing to the language</p>
-  <img src="risk.png" alt="risk_icon" width="15" height="15">
-  <span>Typescript == Javascript. <a href="https://www.codementor.io/@r0zar/don-t-use-typescript-for-your-next-project-here-s-why-1afd52afla">But the Typescript bike can't drive on roads without some minor modification. </span></a>
-<h4>jQuery</h4>
-<h4>AJAX</h4>
-<h4>JSON</h4>
-<h4>XML</h4>
+<ul>
+  <li><h3>JavaScript</h3></li>
+    <p>flexible and powerful language that is implemented consistently by various web browsers, making it the language for web development</p>
+    <p><b>jsconfig.json file</b>: in a directory indicates that the directory is the root of a JavaScript Project.</p>
+    <p><b>Vanilla JS</b>: plain JavaScript</p>
+
+
+  <li><h3>TypeScript</h3></li>
+    <p>a strict syntactical superset of JavaScript and adds optional static typing to the language</p>
+    <span><b>TypeScript Code Check</b>: Quick fixes JavaScript</span>
+    <br>
+    <img src="risk.png" alt="risk_icon" width="15" height="15">
+    <span>Typescript == Javascript. <a href="https://www.codementor.io/@r0zar/don-t-use-typescript-for-your-next-project-here-s-why-1afd52afla">But the Typescript bike can't drive on roads without some minor modification. </span></a>
+
+  <li><h3>jQuery</h3></li>
+  <li><h3>AJAX</h3></li>
+  <li><h3>JSON</h3></li>
+  <li><h3>XML</h3></li>
+</ul>
+
 
 <h2>FrameWorks</h2>
-<h4>Bootstrap</h4>
-<h4>Laravel</h4>
-<h4>Django</h4>
+<ul>
+  <li><h3>Bootstrap</h3></li>
+  <li><h3>Laravel</h3></li>
+  <li><h3>Django</h3></li>
+</ul>
 
 <h2>BackEnd</h2>
-<h3>Web Server</h3>
-<h4>PHP</h4>
-<h4>Node.js</h4>
+<ol>
+  <li><h3>Web Server</h3></li>
+  <ul>
+    <li><h3>PHP</h3></li>
+    <li><h3>Node.js</h3></li>
+    <p>one of the most popular versions of server-side JavaScript</p>
+  </ul>
 
-<h3>DB Server</h3>
-<h4>MySQL</h4>
-<h4>MariaDB</h4>
-<h4>MongoDB</h4>
-
+  <li><h3>DB Server</h3></li>
+  <ul>
+    <li><h3>MySQL</h3></li>
+    <li><h3>MariaDB</h3></li>
+    <li><h3>MongoDB</h3></li>
+  </ul>
+</ol>
 <i>References:</i>
 <i><a href="wwww.codeacademy.com">CodeAcademy</a></i>
 <hr>
