--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ a {
     <p>flexible and powerful language that is implemented consistently by various web browsers, making it the language for web development</p>
     <p><b>jsconfig.json file</b>: in a directory indicates that the directory is the root of a JavaScript Project.</p>
     <p><b>Vanilla JS</b>: plain JavaScript</p>
+    <p><b>ECMAScript6/ES6</b>: The standard for JavaScript</p>
+    <p><b>Javascript Console</b>: an object, a collection of data and actions, that we can use in our code</p>
+    <p>.log(): print console ex) console.log(5);</p>
+    <p>//: single line comment</p>
+    <p>/* */: multi-line line comment</p>
+
 
 
   <li><h3>TypeScript</h3></li>
@@ -92,7 +98,15 @@ a {
   <ul>
     <li><h3>PHP</h3></li>
     <li><h3>Node.js</h3></li>
-    <p>one of the most popular versions of server-side JavaScript</p>
+    <p>one of the most popular non-browser environments of server-side JavaScript</p>
+    <p>used to write server-side applications with access to the operating system, file system, and everything else required to build fully-functional applications</p>
+    <p>using the same language to perform all your work on the web - both on the client and on the server</p>
+    <p><b>Node.js Langauge</b>: JavaScript(main), CoffeeScript, Dart, TypeScript, ClojureScript</p>
+    <p><b>module</b>: an object referring to the functionality that will be exported from a file. In Node, each file is treated as a module</p>
+    <p><b>require()</b>: a function used to import modules from other files or Node packages</p>
+    <p><b>process</b>: an object referencing to the actual computer process running a Node program and allows for access to command-line arguments and much more</p>
+    <p><b>npm </b><i>node package manager</i>: allows access to the hundreds of thousands of open-source packages available</p>
+
   </ul>
 
   <li><h3>DB Server</h3></li>
