resume_website_v1.html
first commit for the resume website

--- a/index.html
+++ b/index.html
@@ -1,276 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-<title>
-  Cut the BS for Data Science
-</title>
-<style>
-a {
-  text-decoration: none;
-}
-</style>
-<script>
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jaye Son - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1, h2, h3 {
+            color: #333;
+        }
+
+        .resume-section {
+            margin-bottom: 20px;
+        }
+
+        .education, .work-experience, .additional-info {
+            border: 1px solid #ccc;
+            padding: 15px;
+            border-radius: 5px;
+        }
+
+        ul {
+            list-style-type: square;
+            margin-left: 20px;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>Jaye Son - Resume</h1>
+    <hr>
 
+    <div class="resume-section education">
+        <h2>Education</h2>
+        <h3>Ewha Womans University</h3>
+        <p>Bachelor of Arts in Economics (Transfer) <br> Seoul, South Korea <br> Expected Graduation: February 2025</p>
+        <ul>
+            <li>Major GPA: 3.0/4.3</li>
+            <li>Relevant Coursework: Energy and Environmental Economics, Financial Engineering, Corporate Finance, Macroeconomics, Econometrics</li>
+        </ul>
 
-<h3>Cut the BS website on Data Science</h3>
-<hr>
+        <h3>Chungnam National University</h3>
+        <p>Bachelor of Arts in English Language and Literature, Bachelor of Engineering in Cognitive Software Engineering (Double Major) <br> Daejeon, South Korea <br> March 2017 - February 2021</p>
+        <ul>
+            <li>Major GPA: 3.7/4.5, Final GPA: 3.6/4.5</li>
+            <li>Exchange Programs: Stony Brook University, USA; TU Berlin, Germany</li>
+        </ul>
+    </div>
 
+    <div class="resume-section work-experience">
+        <h2>Work Experience</h2>
+        <h3>FCB Financial Academic Association</h3>
+        <p>Valuation Analyst <br> Seoul, South Korea <br> August 2024 - September 2024</p>
+        <ul>
+            <li>Initiated a valuation of a Korean cement company focusing on ESG-driven strategies.</li>
+            <li>Conducted due diligence on market segments using 3-statement financial analysis, highlighting the resilience of domestic markets.</li>
+            <li>Incorporated LBO analysis and M&A insights for the cement company’s environmental business division.</li>
+        </ul>
 
-<h1>Web Full Stack</h1>
+        <h3>Korean Energy Institute of Research (KIER)</h3>
+        <p>Summer Data Analyst <br> Daedeok Innopolis, South Korea <br> June 2020 - August 2020</p>
+        <ul>
+            <li>Conducted analysis of Korea's wind and solar energy data, exploring renewable energy challenges in East Asia.</li>
+            <li>Analyzed profitability of solar panels in urban areas using Matplotlib and Excel.</li>
+            <li>Co-authored a research paper on increasing data collection efficiency using Latent Dirichlet Allocation.</li>
+        </ul>
+    </div>
 
-<h2>Terminal</h2>
-<ol>
-  <li>Command Line Terminologies</li>
-    <p><b>Directory</b>: a file system cataloging structure which contains references to other computer files, and possibly other directories</p>
-    <p><b>File System</b>: organizes data; computer's files and directories into a tree structure</p>
-    <p><b>Bash</b>: <i>Bourne-Again SHell</i></p>
+    <div class="resume-section additional-info">
+        <h2>Additional Information</h2>
+        <ul>
+            <li>Languages: Fluent in English, Native in Korean</li>
+            <li>Skills: Excel, PowerPoint, Python, Matplotlib, R, C programming</li>
+            <li>Certifications: FCB Financial Academic Association IB analyst certification</li>
+            <li>Leadership: 2020 Pycon Lightning Talk Presenter, 2019 Chief Editor, 2016 High School Student President</li>
+            <li>Interests: Reading, Golf, Learning Sports</li>
+        </ul>
+    </div>
 
-  <li>Command Line Cheat Sheet</li><br>
-
-  <ul>
-    <li><b>pwd</b> <i>print wokring directory</i>: outputs the name of the current working directory.</li>
-    <li><b>ls</b> <i>list files</i>: lists all files and directories in the working directory.</li>
-    <li><b>cd</b> <i>change directory</i>: switches you into the directory you specify.</li>
-    <p>+) cd ..</p>
-    <p>+) cd ../..</p>
-    <li><b>mkdir</b> <i>make directory</i>: creates a new directory in the working directory.</li>
-    <li><b>touch</b> <i>(verb)</i>: create, change and modify timestamps of a file</li>
-    <li><b>clear</b> <i>(verb)</i>: clears the terminal</li>
-  </ul>
-  <br>
-</ol>
-
-<h2>GitHub</h2>
-
-<h2>User Experience, User Interface (UX/UI)</h2>
-
-<h2>FrontEnd</h2>
-<ul>
-  Text Editors
-  <p>Text Editors (code editors): applications used by developers to write code</p>
-  <li><h4>HTML</h4></li>
-  <li><h4>CSS</h4></li>
-</ul>
-
-<h2>Dynamic FrontEnd</h2>
-<ul>
-  <li><h3>JavaScript</h3></li>
-    <p>flexible and powerful language that is implemented consistently by various web browsers, making it the language for web development</p>
-    <p><b>jsconfig.json file</b>: in a directory indicates that the directory is the root of a JavaScript Project.</p>
-    <p><b>Vanilla JS</b>: plain JavaScript</p>
-    <p><b>ECMAScript6/ES6</b>: The standard for JavaScript</p>
-    <p><b>Javascript Console</b>: an object, a collection of data and actions, that we can use in our code</p>
-    <p>.log(): print console ex) console.log(5);</p>
-    <p>//: single line comment</p>
-    <p>/* */: multi-line line comment</p>
-
-
-
-  <li><h3>TypeScript</h3></li>
-    <p>a strict syntactical superset of JavaScript and adds optional static typing to the language</p>
-    <span><b>TypeScript Code Check</b>: Quick fixes JavaScript</span>
-    <br>
-    <img src="risk.png" alt="risk_icon" width="15" height="15">
-    <span>Typescript == Javascript. <a href="https://www.codementor.io/@r0zar/don-t-use-typescript-for-your-next-project-here-s-why-1afd52afla">But the Typescript bike can't drive on roads without some minor modification. </span></a>
-
-  <li><h3>jQuery</h3></li>
-  <li><h3>AJAX</h3></li>
-  <li><h3>JSON</h3></li>
-  <li><h3>XML</h3></li>
-</ul>
-
-
-<h2>FrameWorks</h2>
-<ul>
-  <li><h3>Bootstrap</h3></li>
-  <li><h3>Laravel</h3></li>
-  <li><h3>Django</h3></li>
-</ul>
-
-<h2>BackEnd</h2>
-<ol>
-  <li><h3>Web Server</h3></li>
-  <ul>
-    <li><h3>PHP</h3></li>
-    <li><h3>Node.js</h3></li>
-    <p>one of the most popular non-browser environments of server-side JavaScript</p>
-    <p>used to write server-side applications with access to the operating system, file system, and everything else required to build fully-functional applications</p>
-    <p>using the same language to perform all your work on the web - both on the client and on the server</p>
-    <p><b>Node.js Langauge</b>: JavaScript(main), CoffeeScript, Dart, TypeScript, ClojureScript</p>
-    <p><b>module</b>: an object referring to the functionality that will be exported from a file. In Node, each file is treated as a module</p>
-    <p><b>require()</b>: a function used to import modules from other files or Node packages</p>
-    <p><b>process</b>: an object referencing to the actual computer process running a Node program and allows for access to command-line arguments and much more</p>
-    <p><b>npm </b><i>node package manager</i>: allows access to the hundreds of thousands of open-source packages available</p>
-
-  </ul>
-
-  <li><h3>DB Server</h3></li>
-  <ul>
-    <li><h3>MySQL</h3></li>
-    <li><h3>MariaDB</h3></li>
-    <li><h3>MongoDB</h3></li>
-  </ul>
-</ol>
-<i>References:</i>
-<i><a href="wwww.codeacademy.com">CodeAcademy</a></i>
-<hr>
-
-
-<h1>Computer Science</h1>
-<h2>Terminal, Command Line</h2>
-
-<h2>Git</h2>
-
-<h2>Algorithms</h2>
-
-<h2>Operating Systems</h2>
-
-<h2>DataBase</h2>
-
-<h2>NetWorking, BlockChains, Cloud Computing</h2>
-
-<h2>Maths for Computer Science</h2>
-<h3>Binary Maths</h3>
-<h3>Discrete Maths</h3>
-<h3>Algebra</h3>
-<h3>Calculus</h3>
-
-<h2>Maths for Data Science</h2>
-<h3>Statistics</h3>
-<ol>
-  <li>Statistics</li>
-  <li>Probability</li>
-  <li>Discrete Random Variables & Probability Distributions</li>
-  <li>Continuous Variables & Probability Distributions</li>
-  <li>Multivariate Probability Distributions</li>
-  <li>Functions of Random Variables</li>
-</ol>
-
-<h2>Maths for Artificial Intelligence</h2>
-<h3>Linear Algebra</h3>
-<h3>Vector</h3>
-<i>References:</i>
-<i>Mathematical Statistics with Applications(Wackerly, Mendenhall, Scheaffer)</i>
-
-<hr>
-
-
-<h1>Data Science</h1>
-
-<h2>Statistics for Data Science</h2>
-
-<h2>Data Analysis Langauges</h2>
-<h3>Python</h3>
-<h3>R</H3>
-
-<h2>Data Visualization Libraries</h2>
-<h3>Matplotlib</h3>
-<h3>Seaborn</h3>
-<h3>ggplot</h3>
-
-<h2>Machine Learning</h2>
-<ol>
-  <h3><li>Classification</li></h3>
-  <ol>
-    <li>MNIST</li>
-    <li>Training a Binary Classifier</li>
-    <li>Performance Measures</li>
-    <li>Multiclass Classification</li>
-    <li>Error Analysis</li>
-    <li>Multilabel Classification</li>
-    <li>Multioutput Classification</li>
-  </ol>
-  <h3><li>Training Models</li></h3>
-  <ol>
-    <li>Linear Regression</li>
-    <li>Gradient Descent</li>
-    <li>Polynomial Regression</li>
-    <li>Learning Curves</li>
-    <li>Regularized Linear Models</li>
-    <li>Logistic Regression</li>
-  </ol>
-  <h3><li>Support Vector Machines</li></h3>
-  <ol>
-    <li>Linear SVM Classification</li>
-    <li>Nonlinear SVM Classification</li>
-    <li>SVM Regression</li>
-    <li>SVM</li>
-  </ol>
-  <h3><li>Decision Trees</li></h3>
-  <ol>
-    <li>Training and Visualizing a Decision Tree</li>
-    <li>Making Predictions</li>
-    <li>Estimating Class Probabilities</li>
-    <li>The CART Training Algorithm</li>
-    <li>Computational Complexity</li>
-    <li>Gini Impurity VS Entropy</li>
-    <li>Regularization Hyperparameters</li>
-    <li>Regression</li>
-    <li>Instability</li>
-  </ol>
-  <h3><li>Ensemble Learning and Random Forests</li></h3>
-  <ol>
-    <li>Voting Classifiers</li>
-    <li>Bagging and Pasting</li>
-    <li>Random Patches and Random Subspaces</li>
-    <li>Random Forests</li>
-    <li>Boosting</li>
-    <li>Stacking</li>
-  </ol>
-  <h3><li>Dimensionality Reduction</li></h3>
-  <ol>
-    <li>The Curse of Dimensionality</li>
-    <li>Main Approaches for Dimensionality Reduction</li>
-    <li>PCA</li>
-    <li>Kernal PCA</li>
-    <li>LLE</li>
-    <li>Other Dimension Reduction Techniques</li>
-  </ol>
-  <h3><li>Unsupervised Learning Techniques</li></h3>
-  <ol>
-    <li>Clustering</li>
-    <li>Gaussian Mixtures</li>
-  </ol>
-
-
-</ol>
-
-<h2>Neural Networks and Deep Learning</h2>
-
-
-<h2>Machine Learning Libraries</h2>
-<h3>Scikit-learn</h3>
-<h3>TensorFlow</h3>
-<h3>Keras</h3>
-<h3>PyTorch</h3>
-<h3>OpenCV</h3>
-
-<h2>Managing Data Resources</h2>
-<h3>SAS</h3>
-<h3>Big Data Optimization</h3>
-
-<hr>
-
-
-<h1>Other Fields on Data Science</h1>
-<h2>Natural Lnaguage Processing</h2>
-<h3>Natural Language Processing Libraries</h4>
-<h4>Natural Language Toolkit (NLTK)</h4>
-<h4>Gensim</h4>
-<h2>Ecologocial Analysis</h2>
-<h2>Bioinformatics</h2>
-<h2>Business Data Analysis</h2>
-<hr>
-
-
-<h1>English</h1>
-
-
-
+    <footer>
+        <hr>
+        <p>Connect with me: <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a></p>
+    </footer>
 </body>
+
 </html>
