--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,35 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 16px;
             line-height: 1.6;
             margin: 20px;
         }
 
-        h1, h2, h3 {
+        h1 {
+            font-size: 28px;
             color: #333;
+        }
+
+        h2 {
+            font-size: 24px;
+            color: #333;
+        }
+
+        h3 {
+            font-size: 20px;
+            color: #333;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        ul {
+            font-size: 16px;
+            list-style-type: square;
+            margin-left: 20px;
         }
 
         .resume-section {
@@ -25,11 +47,6 @@
             border: 1px solid #ccc;
             padding: 15px;
             border-radius: 5px;
-        }
-
-        ul {
-            list-style-type: square;
-            margin-left: 20px;
         }
     </style>
 </head>
