--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             padding: 15px;
             border-radius: 5px;
         }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
