--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaye Son - Portfolio</title>
+    <title>Jieun(Jaye) Son - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -86,7 +86,7 @@
             <div class="location-date">Seoul, South Korea | Expected Graduation: February 2025</div>
         </div>
         <ul>
-            <li>Major GPA: 3.0/4.3</li>
+            <li>GPA: 3.0/4.5</li>
             <li>Relevant Coursework: Energy and Environmental Economics, Financial Engineering, Corporate Finance, Macroeconomics, Econometrics</li>
         </ul>
 
@@ -95,7 +95,7 @@
             <div class="location-date">Daejeon, South Korea | March 2017 - February 2021</div>
         </div>
         <ul>
-            <li>Major GPA: 3.7/4.5, Final GPA: 3.6/4.5</li>
+            <li>GPA: 3.6/4.5</li>
             <li>Exchange Programs: Stony Brook University, USA; TU Berlin, Germany</li>
         </ul>
     </div>
