--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="location-date">Seoul, South Korea | Expected Graduation: February 2025</div>
         </div>
         <ul>
-            <li>GPA: 3.0/4.5</li>
+            <li>Major GPA: 3.0/4.3</li>
             <li>Relevant Coursework: Energy and Environmental Economics, Financial Engineering, Corporate Finance, Macroeconomics, Econometrics</li>
         </ul>
 
@@ -95,7 +95,7 @@
             <div class="location-date">Daejeon, South Korea | March 2017 - February 2021</div>
         </div>
         <ul>
-            <li>GPA: 3.6/4.5</li>
+            <li>Major GPA: 3.7/4.5, Final GPA: 3.6/4.5</li>
             <li>Exchange Programs: Stony Brook University, USA; TU Berlin, Germany</li>
         </ul>
     </div>
@@ -126,11 +126,11 @@
     <div class="resume-section additional-info">
         <h2>Additional Information</h2>
         <ul>
-            <li>Languages: Fluent in English, Native in Korean</li>
-            <li>Skills: Excel, PowerPoint, Python, Matplotlib, R, C programming</li>
-            <li>Certifications: FCB Financial Academic Association IB analyst certification</li>
-            <li>Leadership: 2020 Pycon Lightning Talk Presenter, 2019 Chief Editor, 2016 High School Student President</li>
-            <li>Interests: Reading, Golf, Learning Sports</li>
+            <li><a href="languages.html">Languages</a>: Fluent in English, Native in Korean</li>
+            <li><a href="skills.html">Skills</a>: Excel, PowerPoint, Python, Matplotlib, R, C programming</li>
+            <li><a href="certifications.html">Certifications</a>: FCB Financial Academic Association IB analyst certification</li>
+            <li><a href="leadership.html">Leadership</a>: 2020 Pycon Lightning Talk Presenter, 2019 Chief Editor, 2016 High School Student President</li>
+            <li><a href="interests.html">Interests</a>: Reading, Golf, Learning Sports</li>
         </ul>
     </div>
 
