clickables for the transfer schools

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <ul>
             <li>Major GPA: 3.7/4.5, Final GPA: 3.6/4.5</li>
-            <li>Exchange Programs: Stony Brook University, USA; TU Berlin, Germany</li>
+            <li>Exchange Programs: <a href="stony_brook.html">Stony Brook University</a>, USA; <a href="tu_berlin.html">Technical University Berlin</a>, Germany</li>
         </ul>
     </div>
 
