--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 
 <body>
-    <h1>Jieun Son - Resume</h1>
+    <h1>Jieun Son - Interactive Resume</h1>
     <hr>
 
     <div class="resume-section education">
