--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="location-date">Seoul, South Korea | Expected Graduation: February 2025</div>
         </div>
         <ul>
-            <li>Major GPA: 3.0/4.3</li>
+            <li>GPA: 3.0/4.5</li>
             <li>Relevant Coursework: Energy and Environmental Economics, Financial Engineering, Corporate Finance, Macroeconomics, Econometrics</li>
         </ul>
 
@@ -97,7 +97,7 @@
             <div class="location-date">Daejeon, South Korea | March 2017 - February 2021</div>
         </div>
         <ul>
-            <li>Major GPA: 3.7/4.5, Final GPA: 3.6/4.5</li>
+            <li>GPA: 3.6/4.5</li>
             <li>Exchange Programs: <a href="stony_brook.html">Stony Brook University</a>, USA; <a href="tu_berlin.html">Technical University Berlin</a>, Germany</li>
         </ul>
     </div>
