--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <footer>
         <hr>
-        <p>Connect with me: <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a></p>
+        <p>Connect with me: <a href="https://www.linkedin.com/in/jayeson2999">LinkedIn</a></p>
     </footer>
 </body>
 
