--- a/index.html
+++ b/index.html
@@ -76,12 +76,8 @@
 </head>
 
 <body>
-    <div class="contact-info" style="text-align: center; margin-bottom: 20px;">
-        <p>Email: <a href="mailto:jaye.son@example.com">jaye.son@example.com</a></p>
-        <p>Phone: +82 10-1234-5678</p>
-        <p>Address: Seoul, South Korea</p>
-    </div>
-    <h1>Jieun Son - Resume</h1>
+    <h1><a href="jaye.html">Jieun Son - Resume</a></h1>
+    <p style="text-align: center;"><a href="mailto:jaye.son@.com">jaye.son@example.com</a></p>
     <hr>
 
     <div class="resume-section education">
