--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </head>
 
 <body>
-    <h1><a href="jaye.html">Jieun Son - Resume</a></h1>
-    <p style="text-align: center;"><a href="mailto:jaye.son@.com">jaye.son@example.com</a></p>
+    <h1><a href="jaye.html">Jieun Son - Jaye</a></h1>
+    <p style="text-align: center;"><a href="mailto:jayeson.work2929@gmail.com">jayeson.work2929@gmail.com</a></p>
     <hr>
 
     <div class="resume-section education">
