--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <body>
     <h1><a href="jaye.html">Jieun Son - Jaye</a></h1>
-    <p style="text-align: center;"><a href="mailto:jayeson.work2929@gmail.com">jayeson.work2929@gmail.com</a></p>
+    <p style="text-align: center;">Contact me via: <a href="mailto:jayeson.work2929@gmail.com">jayeson.work2929@gmail.com</a> or <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a></p>
     <hr>
 
     <div class="resume-section education">
@@ -139,7 +139,7 @@
 
     <footer>
         <hr>
-        <p>Connect with me: <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a></p>
+        <p style="text-align: center;">&copy; 2024 Jieun Son. All rights reserved.</p>
     </footer>
 </body>
 
