--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 
 <body>
-    <h1><a href="jaye.html">Jieun Son - Jaye</a></h1>
+    <h1><a href="jaye.html">Jieun Son</a></h1>
     <p style="text-align: center;">Contact me via: <a href="mailto:jayeson.work2929@gmail.com">jayeson.work2929@gmail.com</a> or <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a></p>
     <hr>
 
